uefi-macros/tests/ui/fail/entry_bad_const.rs
#![no_main]

use uefi::prelude::*;

#[entry]
const fn main() -> Status {
    Status::SUCCESS
}
