uefi-macros/tests/ui/fail/entry_bad_const.stderr
error: Entry function should not be const
 --> tests/ui/fail/entry_bad_const.rs:6:1
  |
6 | const fn main() -> Status {
  | ^^^^^
